@@ -64,6 +64,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Fixed: Email Port, please check your email settings if the port is still correct
 - Fixed: Gui display problem when going from Scenes to the Devices table
 - Fixed: Pushover/NMA now use the subject again
+- Implemented: RFXCom pTypeInterfaceControl messages
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
